--- a/src/components/Strains/strains.module.css
+++ b/src/components/Strains/strains.module.css
@@ -64,6 +64,8 @@
 
 .layout {
   padding: 40px;
+  
+  
 }
 
 .search {
@@ -77,6 +79,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 @media (min-width: 900px) and (max-width: 1300px) {
