--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -1,29 +1,39 @@
 .nav {
-    padding: 5px 40px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #8c198c;
-    color: white;
-  }
+  padding: 5px 40px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #8c198c;
+  color: white;
+}
 
-  .cart {
-    border: 1px solid white;
-    border-radius: 50%;
-    padding:  10px 12px;
-    color: #8c198c;
-    cursor: pointer;
-  }
+.cart {
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 10px 12px;
+  color: #8c198c;
+  cursor: pointer;
+  position: relative;
+}
 
-  .cart:hover {
-    opacity: 0.8;
-    
-  }
+.cart:hover {
+  opacity: 0.8;
+}
+
+.quantity {
+  background-color: red;
+  position: absolute;
+  bottom: -3px;
+  right: -10px;
+  padding: 5px 7px;
+  color: white;
   
-  @media (max-width: 1000px) {
-    .nav {
-      padding: 5px 20px;
-    }
+  border-radius: 50%;
+}
+
+@media (max-width: 1000px) {
+  .nav {
+    padding: 5px 20px;
   }
-  
+}
