--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -15,6 +15,12 @@
   color: #8c198c;
   cursor: pointer;
   position: relative;
+  margin-right: 20px;
+}
+
+.ctn {
+  display: flex;
+  align-items: center;
 }
 
 .cart:hover {
